content/_generated-doc/2.7/config/quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed]]link:#quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.index-dependency-artifacts-on-the-classpath-that-should-also-be-indexed[Artifacts on the classpath that should also be indexed]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.group-id]]`link:#quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.group-id[quarkus.index-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.artifact-id]]`link:#quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.artifact-id[quarkus.index-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.classifier]]`link:#quarkus-index-dependency-index-application-archive-build-step-index-dependency-configuration_quarkus.index-dependency.-dependency-name-.classifier[quarkus.index-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.
--|string 
|

|===